<resources>
    <string name="app_name">DogAplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_welc_txtV_welcome_adoption">Adopcion de Perritos</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="navigation_drawer_open">"Abrir"</string>
    <string name="navigation_drawer_close">"Cerrar"</string>
    <string name="frag_reg_txtin_usuario">"Usuario"</string>
    <string name="frag_reg_txtin_contrasena">"Contraseña"</string>
    <string name="frag_reg_txtin_nombre">"Nombre"</string>
    <string name="frag_reg_txtin_ubicacion">"Ubicacion"</string>
    <string name="frag_reg_txtin_telefono">"Telefono"</string>
    <string name="frag_reg_txtin_imgurl">"Foto de perfil  (url)"</string>
    <string name="introduction_welcome">"Make your life more happy with us to have a little new friends"</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings -->
    <string name="generales">Generales</string>
    <string name="dark_light_theme_button">Modo Oscuro</string>
</resources>