<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrarFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrar"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/fragRegTxtInUserId"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:bufferType="editable"
            android:hint="@string/frag_reg_txtin_usuario"
            android:inputType="text"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/fragRegTxtInPwdId"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frag_reg_txtin_contrasena"
            android:inputType="textPassword" />\
        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/fragRegTxtInNameId"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:bufferType="editable"
            android:hint="@string/frag_reg_txtin_nombre"
            android:inputType="text"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/fragRegTxtInTelId"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frag_reg_txtin_telefono"
            android:inputType="phone" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/fragRegTxtInUbiId"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:bufferType="editable"
            android:hint="@string/frag_reg_txtin_ubicacion"
            android:inputType="text"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <EditText
            android:id="@+id/fragRegTxtInImgId"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frag_reg_txtin_imgurl"
            android:inputType="text" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragRegBtnRegId"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#57C6F8"
            android:text="Registrar"
            app:cornerRadius="10dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>